--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@nuxt/image-edge": "1.3.0-28493895.369b747",
     "@nuxtjs/i18n": "9.5.4",
+    "@nuxtjs/tailwindcss": "6.14.0",
+    "@tailwindcss/typography": "^0.5.16",
     "contentful": "^11.5.20",
+    "marked": "^15.0.12",
     "nuxt": "^3.17.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
